1-example-nginx/kube/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment
spec:
  selector:
    app: 1-nginx-deployment
  ports:
    - port: 3000
      targetPort: 3000
